# rustos

./: .gitignore  README.md
display/: Cargo.toml
display/src/: lib.rs
display/src/vga/: character.rs  color.rs  mod.rs  text_buffer.rs  writer.rs
hardware/: Cargo.toml
hardware/src/: lib.rs
hardware/src/x86_64/: mod.rs
malloc/: Cargo.toml
malloc/src/: lib.rs
memory/: Cargo.toml
memory/src/: lib.rs
memory/src/allocator/: buddy.rs  bump.rs  free_list.rs  mod.rs  slab.rs
memory/src/frame/: frame_allocator.rs  mod.rs
memory/src/heap/: heap_allocator.rs  mod.rs
memory/src/kernel/: bump_allocator.rs  empty_frame_list.rs  frame_bitmap.rs  mod.rs  stack_list.rs
memory/src/paging/: mod.rs  page_table.rs  simulation.rs
memory/src/util/: array.rs  buddy_allocator.rs  bump_allocator.rs  double_linked_list.rs  frame_bitmap.rs  free_list.rs  free_list_allocator.rs  linked_list.rs  mod.rs
multiboot/: Cargo.toml
multiboot/src/: lib.rs
multiboot/src/multiboot/: MultiBootHeaderTags.rs  mod.rs
multiboot/src/multiboot_header/: mod.rs  multiboot_header_tag.rs  tag.rs  tag_iterator.rs  tags.rs  tags_info.rs
multiprocess/: Cargo.toml
multiprocess/src/: lib.rs
multiprocess/src/executor/: mod.rs
setup/: Cargo.toml
setup/src/: lib.rs
setup/src/globals/: mod.rs
setup/src/interrupts/handlers/: mod.rs
setup/src/process/: mod.rs
stdx/: Cargo.toml
stdx/src/: lib.rs
stdx/src/macros/: mod.rs
stdx_memory/: Cargo.toml  xargo
stdx_memory/src/: lib.rs
testos/: Cargo.toml  Makefile  gdbcommand.txt  pkglist.txt  rust-os.json
testos/src/: boot.asm  linker.ld  long_mode.asm  os-main.rs
testos/src/multiboot/: mod.rs
tests/: Cargo.toml
tests/src/: buddy_allocator_tests.rs  buddy_free_list_tests.rs  double_linked_list_tests.rs  empty_frame_list_tests.rs  frame_allocator_tests.rs  frame_bitmap_tests.rs  free_list_allocator_tests.rs  lib.rs  linked_list_tests.rs  memory_tests.rs  paging_tests.rs
(+38 files in other folders)
