[package]
name = "setup"
version = "0.1.0"
authors = ["charlolizard <nikitas2209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic8259_simple = "0.1.1"

[dependencies.hardware]
path = "../hardware"

[dependencies.multiprocess]
path = "../multiprocess"

[dependencies.display]
path = "../display"

[dependencies.memory]
path = "../memory"

[dependencies.multiboot]
path = "../multiboot"