[package]
name = "os-main"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]


[dependencies]
rlibc = "1.0"

[dependencies.multiboot]
path = "../multiboot"

[dependencies.display]
path = "../display"

[dependencies.memory]
path = "../memory"

[dependencies.hardware]
path = "../hardware"

[dependencies.malloc]
path = "../malloc"