[package]
name = "os-main"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]


[dependencies]
rlibc = "1.0"
x86_64 = "0.7.6"

[dependencies.multiboot]
path = "../multiboot"

[dependencies.display]
path = "../display"

[dependencies.memory]
path = "../memory"

[dependencies.hardware]
path = "../hardware"

[dependencies.malloc]
path = "../malloc"

[dependencies.stdx_memory]
path = "../stdx_memory"

[dependencies.stdx]
path = "../stdx"