[package]
name = "os-main"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]


[dependencies]
rlibc = "1.0"
pic8259_simple = "0.1.1"

[dependencies.multiboot]
path = "../multiboot"

[dependencies.display]
path = "../display"

[dependencies.memory]
path = "../memory"

[dependencies.hardware]
path = "../hardware"

[dependencies.stdx_memory]
path = "../stdx_memory"

[dependencies.stdx]
path = "../stdx"

[dependencies.multiprocess]
path = "../multiprocess"

[dependencies.setup]
path = "../setup"